Fixed preview scrollbars. Prevented panel body from generating scroll bars, and defined the scroll bar styles in the contact style sheet. Was rendering with a weird white background, probably due to the 3 backgrounds defined. So I explicitly defined the background color of the scrollbar itself, in addition to the track.

--- a/contacts-style.css
+++ b/contacts-style.css
@@ -104,7 +104,6 @@ html {
 	padding: 0;
 	font: 300 14px "open-sans",sans-serif;
 	color: rgba(255,255,255,.6);
-	/*background: url("contacts-bg.png") , url("contacts-gradient.svg"), rgb(34,37,38);*/
 	background: url("contacts-bg.png"),
 				-moz-radial-gradient(50% 0%, circle farthest-side, rgba(151,169,185,.28), rgba(151,169,185,0)) fixed,
 				rgb(34,37,38);
@@ -138,6 +137,30 @@ a:link,a:visited {
 
 a:hover {
 	text-decoration: underline;
+}
+
+
+/* SCROLLBARS
+---------------------------------------------------------------------*/
+*::-webkit-scrollbar {
+	width: 8px;
+	height: 8px;
+	background: rgb(34,37,38);
+}
+
+*::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.35);
+	background: rgba(0,0,0,.15);
+	border-radius: 4px;
+}
+ 
+*::-webkit-scrollbar-thumb {
+	border-radius: 4px;
+	background: rgba(127,127,127,.3);
+}
+
+*::-webkit-scrollbar-corner {
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.35); 
 }
 
 
